# Power-menu

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: assets.rs  main.rs  tray.rs  windowItem.rs
